--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Cadastro Cliente PBMR",
   "main": "web.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "http-server"
+  },,
   "keywords": [
     "example",
     "heroku"
